# python-memory-instrument

./: .gitignore  README.md  pyproject.toml
.github/workflows/: auto-pr-develop.yml  auto-pr-feature-bugfix.yml  experimental.yml  release.yml
examples/flask_example/: app.py  application.py  profile_logs.db  profile_logs.db-shm  profile_logs.db-wal
examples/simple/: main.py
examples/simple/ou/: fn.py
memory_tracker/: cli.py  importer.py  injector.py  instrumentor.py  profiler.py  report_builder.py  sqlite_profile_handler.py
tests/: test_injector.py  test_sqlite_profile_handler.py
